--- a/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
@@ -7,19 +7,6 @@
     android:background="@color/colorPrimary">
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="@font/nunito_semibold"
-        android:text="@string/inicio"
-        android:textColor="@color/common_google_signin_btn_text_dark_default"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/title2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -29,7 +16,7 @@
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -73,7 +60,7 @@
             android:fontFamily="@font/nunito_semibold"
             android:foregroundGravity="center_vertical|center_horizontal"
             android:gravity="center_horizontal|center_vertical"
-            android:padding="16dp"
+            android:padding="8dp"
             android:text="@string/porciento"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="80sp" />
@@ -83,7 +70,6 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:fontFamily="@font/nunito"
         android:text="@string/veinticuatro"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
@@ -112,48 +98,39 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5">
 
-        <com.google.android.material.card.MaterialCardView
 
-            android:id="@+id/materialCardView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="20dp"
-            app:cardBackgroundColor="@color/colorAccent"
-            app:cardCornerRadius="4dp"
-            app:cardElevation="5dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal|center_vertical"
+            android:orientation="horizontal">
 
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/textView7"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_weight="1"
+                android:fontFamily="@font/nunito_semibold"
+                android:padding="15dp"
+                android:text="@string/estadonodo"
+                android:textAlignment="textEnd"
+                android:textColor="#000000"
+                android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/nunito_semibold"
-                    android:padding="15dp"
-                    android:text="@string/estadonodo"
-                    android:textColor="@color/common_google_signin_btn_text_dark_default"
-                    android:textSize="20sp" />
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
+                android:fontFamily="@font/nunito_semibold"
+                android:padding="15dp"
+                android:text="@string/activo"
+                android:textAlignment="textStart"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/nunito_semibold"
-                    android:padding="15dp"
-                    android:text="@string/activo"
-                    android:textColor="@color/common_google_signin_btn_text_dark_default"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
-        </com.google.android.material.card.MaterialCardView>
     </com.google.android.material.card.MaterialCardView>
 
     <com.google.android.material.card.MaterialCardView
