--- a/BeaconScanner/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/BeaconScanner/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_inicio"
-            android:icon="@drawable/brujula"
+            android:icon="@drawable/home"
             android:title="@string/inicio" />
         <item
             android:id="@+id/nav_home"
