--- a/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
+++ b/BeaconScanner/app/src/main/res/layout/fragment_inicio_conductor.xml
@@ -10,6 +10,7 @@
         android:id="@+id/title2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/nunito_semibold"
         android:text="@string/cal"
         android:textColor="@color/common_google_signin_btn_text_dark_default"
@@ -82,7 +83,7 @@
 
         android:id="@+id/materialCardView"
         android:layout_width="0dp"
-        android:layout_height="match_constraint"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
@@ -136,14 +137,18 @@
 
             </LinearLayout>
 
-            <com.db.williamchart.view.LineChartView
+            <!--   <com.db.williamchart.view.LineChartView
                 android:id="@+id/lineChart"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:chart_axis="none"
                 app:chart_lineColor="@color/colorAccent"
                 app:chart_lineThickness="3dp"
-                app:chart_smoothLine="true" />
+                app:chart_smoothLine="true" /> -->
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chart"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
         </LinearLayout>
 
