--- a/BeaconScanner/app/src/main/res/menu/filter_menu.xml
+++ b/BeaconScanner/app/src/main/res/menu/filter_menu.xml
@@ -2,20 +2,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <group android:checkableBehavior="all">
-        <item android:id="@+id/calidadFilter"
+        <item
+            android:id="@+id/coFilter"
             android:icon="@drawable/icon"
-            android:title="@string/calidad" />
+            android:title="@string/co" />
 
-        <item android:id="@+id/so2Filter"
+        <item
+            android:id="@+id/noxFilter"
+            android:icon="@drawable/icon"
+            android:title="@string/nox" />
+
+        <item
+            android:id="@+id/azufreFilter"
             android:icon="@drawable/icon"
             android:title="@string/dioxidoAzufre" />
 
-        <item android:id="@+id/ozonoFilter"
+        <item
+            android:id="@+id/ozonoFilter"
             android:icon="@drawable/icon"
             android:title="@string/ozono" />
-
-        <item android:id="@+id/irritantesFilter"
-            android:icon="@drawable/icon"
-            android:title="@string/irritantes" />
     </group>
 </menu>
